2A/05_Projet_GL/src/test/deca/syntax/valid/HelloWorld/13_print_anti_slash.deca
// Description:
//    Programme avec le caractère \ protegé
// Resultats:
//    helloo world! \ je suis !
//
// Historique:
//    cree le 20/12/2023


{
    println("helloo world! \\ je suis !");
}