2A/05_Projet_GL/src/test/deca/syntax/invalid/HelloWorld/01_chaine_hors_guillemet_double.deca
// Description:
//    Programme avec chaine sans guillement double à la fin.
// Resultats:
//    Erreur lexicographique : ligne 11 :4: token recognition error at: '"helloo world!\n}', absence de " à la fin, donc il compte } comme si c'était de la chaine. 
//
// Historique:
//    cree le 20/12/2023


{
    "helloo world!
}